force-app/main/default/objects/ReturnOrder/fields/LabelEmailSent__c.field-meta.xml
<CustomField>
    <fullName>LabelEmailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the return label has been emailed to the customer</description>
    <label>Label Email Sent</label>
    <type>Checkbox</type>
</CustomField>