force-app/main/default/objects/ReturnOrder/fields/LabelEmailSentDate__c.field-meta.xml
<CustomField>
    <fullName>LabelEmailSentDate__c</fullName>
    <description>Date and time when the return label was emailed to the customer</description>
    <label>Label Email Sent Date</label>
    <type>DateTime</type>
</CustomField>